--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "type": "module",
   "dependencies": {
     "react": "^18.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
-  
 }
